# turing-text

./: .gitignore  .main.cpp.swp  AiClass.cpp  AiClass.h  CMakeLists.txt  Delegator.cpp  Delegator.h  GameBook.cpp  GameBook.h  HelpTool.cpp  HelpTool.h  HelpTool_class.cpp  Human.h  README.md  Twilio.h  a.out  delegator_class.cpp  human.cpp  main.cpp  server.cpp  test.cpp  test.md  twilio.cpp
.github/workflows/: c-cpp.yml  ci.yml  cmake.yml  main.yml
src/: cpp_demo  cpp_demo.cc
